# AlgoSelect

./: README.md
data/: Cliff_Delta__runtime__patched2_.csv  Pilot_summary__patched2_.csv
demos/: 20x20_performance_heatmap_tikz.json  20x20_performance_heatmap_tikz_standalone.tex  experiment.py  json_to_tikz.py  pilot.py  pyproject.toml
