[project]
authors = [{name = "Ethycs", email = "Ethycs@users.noreply.github.com"}]
dependencies = []
name = "demos"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
demos = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.3.0,<3"
scipy = ">=1.15.2,<2"
networkx = ">=3.5,<4"
scikit-learn = ">=1.7.0,<2"
pandas = ">=2.3.0,<3"
matplotlib = "*"
seaborn = "*"
